--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@ color: #f1f1f1;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
+  .sidenav {padding-left: 4px; padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
 </style>
