--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <style>
     .sidenav {
     height: 100%;
-    width: 120px;
+    width: 122px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -37,7 +37,7 @@ color: #f1f1f1;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-left: 4px; padding-top: 15px;}
+  .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
 </style>
@@ -58,8 +58,8 @@ color: #f1f1f1;
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
 function openNav() {
-    document.getElementById("mySidenav").style.width = "120px";
-    document.getElementById("main").style.marginLeft = "120px";
+    document.getElementById("mySidenav").style.width = "122px";
+    document.getElementById("main").style.marginLeft = "122px";
 }
 
 /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
