added a border for my sidebar

--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <style>
     #main {
-        overflow-x: hidden;
         transition: 0.5s;
+        margin-left: 124px;
     }
     .sidenav {
         height: 100%;
@@ -17,6 +17,9 @@
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 60px;
+        border-right-style: outset;
+        border-top-style: outset;
+        border-bottom-style: outset;
     }
 
     .sidenav a {
@@ -60,7 +63,7 @@
         </div>
 
     <script>
-    /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
+    /* Set the width of the side navigation to 124px and the left margin of the page content to 124px */
     function openNav() {
         document.getElementById("mySidenav").style.width = "124px";
         document.getElementById("main").style.marginLeft = "124px";
@@ -75,7 +78,7 @@
     <span style="font-size:30px;cursor:pointer;float:left;" onclick="openNav()">&#9776; menu</span>
 
     <p style="text-align:center;"><i>I do not like work even when someone else does it.</i> -- Mark Twain</p>
-    <div id="main" style="margin-left:120px;clear:both" >
+    <div id="main" style="margin-left:124px;clear:both" >
             <hr>
             <hr>
             <div>
